fix: wrap quality check errors in code block
Format error output with triple backticks instead of
plain text for better readability in PR comments.

--- a/.github/workflows/odoo-quality.yml
+++ b/.github/workflows/odoo-quality.yml
@@ -459,7 +459,7 @@ jobs:
               for (const [tool, error] of Object.entries(errors)) {
                 if (error && error.trim() && results[tool] !== 'pass') {
                   body += `<details>\n<summary><b>${toolNames[tool]}</b> issues</summary>\n\n`;
-                  body += `${error.trim()}\n`;
+                  body += `\`\`\`\n${error.trim()}\n\`\`\`\n`;
                   body += `</details>\n\n`;
                 }
               }
