--- a/.github/workflows/odoo-tests.yml
+++ b/.github/workflows/odoo-tests.yml
@@ -476,21 +476,17 @@ jobs:
           sed -i 's|^TEST_ENABLED=.*|TEST_ENABLED=true|' .env
 
           # Determine effective test tags
-          # If test-tag is empty (user wants all tests), use /module syntax to limit to tested modules only
-          # Otherwise use the specified tag
+          # If test-tag is empty, leave it empty to use --test-enable (runs all tests for installed modules)
+          # Note: /module,/module2 syntax doesn't work with current Docker image due to IFS bug
           EFFECTIVE_TAG="${{ steps.discover.outputs.test-tag }}"
           if [ -z "$EFFECTIVE_TAG" ]; then
-            # Empty tag = run all tests, but ONLY for the modules being tested (not dependencies)
-            # Convert "mod1,mod2,mod3" to "/mod1,/mod2,/mod3" (comma-separated per Odoo docs)
-            MODULES="${{ steps.final.outputs.modules }}"
-            # Clean modules: remove any spaces, newlines, and normalize commas
-            MODULES=$(echo "$MODULES" | tr -d ' \n\r' | tr -s ',')
-            EFFECTIVE_TAG=$(echo "$MODULES" | sed 's/,/,\//g' | sed 's/^/\//')
-            echo "Module-scoped test tags: $EFFECTIVE_TAG"
+            # Empty tag = use --test-enable which runs tests for all CUSTOM_MODULES
+            # This works because we control which modules are installed
+            echo "Using --test-enable mode (empty TEST_TAGS)"
+          else
+            echo "Using test tag: $EFFECTIVE_TAG"
           fi
-          echo "Final TEST_TAGS value: $EFFECTIVE_TAG"
-          # Quote the value to preserve commas in docker-compose
-          sed -i "s|^TEST_TAGS=.*|TEST_TAGS=\"${EFFECTIVE_TAG}\"|" .env
+          sed -i "s|^TEST_TAGS=.*|TEST_TAGS=${EFFECTIVE_TAG}|" .env
           sed -i 's|^BASE_MODULES=.*|BASE_MODULES=|' .env
           sed -i 's|^CUSTOM_MODULES=.*|CUSTOM_MODULES=${{ steps.final.outputs.modules }}|' .env
           sed -i 's|^VCPUS=.*|VCPUS=2|' .env
