--- a/.github/workflows/odoo-tests.yml
+++ b/.github/workflows/odoo-tests.yml
@@ -476,19 +476,28 @@ jobs:
           sed -i 's|^TEST_ENABLED=.*|TEST_ENABLED=true|' .env
 
           # Determine effective test tags
-          # If test-tag is empty (user wants all tests), use /module syntax to limit to tested modules only
-          # Requires Docker image fix: https://github.com/much-GmbH/odoo-docker-builds/pull/69
+          # TEST_TAGS must NEVER be empty - empty causes --test-enable which runs ALL Odoo tests
+          # Logic:
+          #   - If tag configured in pyproject.toml → use that (e.g., "much_unit")
+          #   - If tag empty + PR → use /affected_module1,/affected_module2,...
+          #   - If tag empty + push → use /all_repo_module1,/all_repo_module2,...
+          # Dependencies from [odoo.dependencies] are excluded - they're for availability, not testing
           EFFECTIVE_TAG="${{ steps.discover.outputs.test-tag }}"
           if [ -z "$EFFECTIVE_TAG" ]; then
-            # Empty tag = run all tests, but ONLY for the modules being tested (not dependencies)
-            # Convert "mod1,mod2,mod3" to "/mod1,/mod2,/mod3" (comma-separated per Odoo docs)
+            # Empty tag = run all tests, but ONLY for repo modules (not dependencies)
+            # Convert "mod1,mod2,mod3" to "/mod1,/mod2,/mod3" (Odoo module-scoped test syntax)
             MODULES="${{ steps.final.outputs.modules }}"
             # Clean modules: remove any spaces, newlines, and normalize commas
             MODULES=$(echo "$MODULES" | tr -d ' \n\r' | tr -s ',')
-            EFFECTIVE_TAG=$(echo "$MODULES" | sed 's/,/,\//g' | sed 's/^/\//')
-            echo "Module-scoped test tags: $EFFECTIVE_TAG"
+            if [ -n "$MODULES" ]; then
+              EFFECTIVE_TAG=$(echo "$MODULES" | sed 's/,/,\//g' | sed 's/^/\//')
+              echo "Test mode: ${{ steps.discover.outputs.test_mode }}"
+              echo "Module-scoped test tags: $EFFECTIVE_TAG"
+            else
+              echo "::warning::No modules to test - TEST_TAGS will be empty"
+            fi
           else
-            echo "Using test tag: $EFFECTIVE_TAG"
+            echo "Using configured test tag: $EFFECTIVE_TAG"
           fi
           sed -i "s|^TEST_TAGS=.*|TEST_TAGS=${EFFECTIVE_TAG}|" .env
           sed -i 's|^BASE_MODULES=.*|BASE_MODULES=|' .env
